--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-<meta name="google" content="notranslate"/>
-    
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+gi<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- CSS only -->
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link
